--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -16,27 +16,28 @@
         android:background="@drawable/logo" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/imglogo"
-        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:id="@+id/textHouse"
+            android:id="@+id/txvHouse"
+            android:paddingLeft="100dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/txvHC"
-            android:textSize="37sp" />
+            android:textSize="50sp" />
 
         <TextView
             android:id="@+id/txvCloud"
+            android:paddingLeft="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/txvHC2"
             android:textColor="#FF5252"
-            android:textSize="37sp" />
+            android:textSize="50sp" />
     </LinearLayout>
 
 </RelativeLayout>
