--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,15 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.housecloud.housecloud.SplashScreenActivity">
+    tools:context="com.housecloud.housecloud.SplashScreenActivity"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:id="@+id/spash">
 
-    <ImageView
-        android:id="@+id/imglogo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="204dp"
-        android:background="@drawable/ic_logo" />
+
+
+        <VideoView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:id="@+id/videoSplash"/>
+
+
+
+
 
 </RelativeLayout>
