--- a/app/src/main/res/layout/cards_main.xml
+++ b/app/src/main/res/layout/cards_main.xml
@@ -7,26 +7,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="14dp"
     app:cardUseCompatPadding="true"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    app:cardElevation="10dp"
+    android:hardwareAccelerated="true"
+    app:cardMaxElevation="5dp"
+    android:background="@android:drawable/dialog_holo_light_frame">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:gravity="center"
+        >
 
         <ImageButton
             android:id="@+id/ivMainImage"
             android:src="@mipmap/ic_launcher"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             />
 
         <TextView
             android:id="@+id/tvCaption"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="50dp"
-            android:text="default caption"/>
+            android:text="default caption"
+            android:background="@android:color/white"
+            android:layout_marginTop="-80dp"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
