--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,147 +3,283 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_below="@id/llDegradado"
+        android:background="@color/colorLogin"></LinearLayout>
     <LinearLayout
         android:id="@+id/llDegradado"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="match_parent"
         android:background="@drawable/degradado"
-        android:orientation="vertical">
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_above="@id/panelLogin"
+        android:layout_marginBottom="-100dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+
+            >
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/angelnube"
+                android:layout_gravity="center|center_horizontal"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-
-    <com.dd.ShadowLayout
-        android:id="@+id/panelLogin0"
-        android:layout_width="match_parent"
-        android:layout_height="270dp"
-        app:sl_shadowColor="#1AA00000"
-        app:sl_cornerRadius="15dp"
-        android:gravity="top|center"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="80dp"
-        android:orientation="vertical"
-        android:layout_below="@+id/llDegradado"
-        android:layout_marginTop="-50dp">
-
-        <LinearLayout
-            android:id="@+id/panelLogin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/corners"
-           android:orientation="vertical"
-            >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="LOGIN"
-                android:gravity="center"
-                android:textSize="25dp"
-                android:textColor="@android:color/black"
-                android:layout_marginTop="10dp"
-                />
-
-            <EditText
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="User"
-                android:textColorHint="@color/colorAccent"
-                android:backgroundTint="@color/colorAccent"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="50dp"/>
-
-            <EditText
-                android:id="@+id/editText2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:hint="Password"
-                android:textColorHint="@color/colorAccent"
-                android:backgroundTint="@color/colorAccent"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"/>
-
-
-
-        </LinearLayout>
-    </com.dd.ShadowLayout>
-
-    <Button
-        android:id="@+id/btNext"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-30dp"
-        android:layout_below="@+id/panelLogin0"
-        android:text="Next"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/cornersdegradado"
-        android:textColor="@android:color/white"
-
-        />
 
 
     <LinearLayout
-        android:id="@+id/panelLogin1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/btNext"
+        android:layout_above="@+id/llbottom"
+        android:background="@android:color/transparent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:id="@id/panelLogin"
         >
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/btnGoogle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            >
-
-        </com.google.android.gms.common.SignInButton>
-
-        <com.facebook.login.widget.LoginButton
-            xmlns:facebook="http://schemas.android.com/apk/res-auto"
-            facebook:com_facebook_login_text=""
-            facebook:com_facebook_logout_text=""
-            android:id="@+id/btnFacebook"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:visibility="invisible"
-
-            />
-
         <com.dd.ShadowLayout
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/panelLogin0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:sl_shadowColor="#1AA00000"
             app:sl_cornerRadius="15dp"
-            android:gravity="top|center"
+            android:orientation="vertical"
+            android:layout_below="@+id/llDegradado"
+            android:layout_marginHorizontal="25dp"
             >
-            <Button
-                android:background="@android:color/holo_red_dark"
+
+            <LinearLayout
+                android:id="@+id/panelLogin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/fb"
-                android:onClick="onClickFacebookButton"
-                android:textAllCaps="false"
-                android:text=""
-                android:textColor="#ffffff"
-                />
+                android:background="@drawable/corners"
+                android:orientation="vertical"
+                android:paddingBottom="40dp"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="LOGIN"
+                    android:gravity="center"
+                    android:textSize="21dp"
+                    android:textColor="@android:color/black"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="25dp"
+                    android:textStyle="bold"
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="28dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="EMAIL"
+                        android:textColor="@color/colorTxvw"
+                        android:paddingBottom="10dp"
+                        android:textStyle="bold"/>
+
+                    <EditText
+                        android:id="@+id/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:backgroundTint="@color/colorLine"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="PASSWORD"
+                        android:textColor="@color/colorTxvw"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="20dp"
+                        android:textStyle="bold"/>
+
+                    <EditText
+                        android:id="@+id/editText2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:backgroundTint="@color/colorLine"
+                        />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Forgot Password?"
+                        android:layout_gravity="right"
+                        android:textAllCaps="false"
+                        android:background="@android:color/transparent"
+                        android:textColor="@color/colorTxvw"
+                        android:padding="0dp"/>
+                </LinearLayout>
+
+
+
+
+
+
+            </LinearLayout>
         </com.dd.ShadowLayout>
 
-
+        <Button
+            android:id="@+id/btNext"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            android:background="@drawable/cornersdegradado"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="-32dp"
+            />
 
     </LinearLayout>
 
 
 
+    <LinearLayout
+        android:id="@+id/llbottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:paddingVertical="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Or with"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/btnFacebook"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:visibility="gone"
+
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="7dp">
+                <com.dd.ShadowLayout
+                    android:layout_width="58dp"
+                    android:layout_height="58dp"
+                    app:sl_shadowColor="#7AA00000"
+                    app:sl_cornerRadius="50dp"
+                    android:gravity="center"
+
+                    >
+                    <Button
+                        android:background="@drawable/ic_google_plus"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/signInButton"
+                        android:onClick="onClickLoginButtons"
+                        android:textAllCaps="false"
+                        android:text=""
+                        android:textColor="#ffffff"
+                        android:layout_gravity=""
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+
+                        />
+
+                </com.dd.ShadowLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="7dp">
+
+                <com.dd.ShadowLayout
+                    android:layout_width="58dp"
+                    android:layout_height="58dp"
+                    app:sl_shadowColor="#7AA00000"
+                    app:sl_cornerRadius="50dp"
+                    android:gravity="center"
+
+                    >
+                    <Button
+                        android:background="@drawable/ic_facebook_2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/fb"
+                        android:onClick="onClickLoginButtons"
+                        android:textAllCaps="false"
+                        android:text=""
+                        android:textColor="#ffffff"
+                        android:layout_gravity=""
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        />
+
+                </com.dd.ShadowLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Don't have an account?"/>
+            <Button
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="Register"
+                android:textAllCaps="false"
+                android:padding="0dp"
+                android:background="@android:color/transparent"
+                android:onClick="methodRegistrar"
+                android:textColor="@color/colorTxvw"
+                android:layout_marginLeft="-3dp"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 
 
