--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorFondo">#ff328f</color>
     <color name="colorMain">#313281</color>
+    <color name="colorLogin">#FDFDFD</color>
+    <color name="colorTxvw">#212367</color>
+    <color name="colorLine">#E8E8E8</color>
+
 </resources>
