--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,11 +124,13 @@
                         />
 
                     <Button
+                        android:id="@+id/btnForgot"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Forgot Password?"
                         android:layout_gravity="right"
                         android:textAllCaps="false"
+                        android:onClick="OlvidarContrasenia"
                         android:background="@android:color/transparent"
                         android:textColor="@color/colorTxvw"
                         android:padding="0dp"/>
