--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFF"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:id="@+id/activity_log_in"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,8 +39,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -130,7 +128,7 @@
                         android:text="Forgot Password?"
                         android:layout_gravity="right"
                         android:textAllCaps="false"
-                        android:onClick="OlvidarContrasenia"
+                        android:onClick="olvidarPassword"
                         android:background="@android:color/transparent"
                         android:textColor="@color/colorTxvw"
                         android:padding="0dp"/>
@@ -155,6 +153,7 @@
             />
 
     </LinearLayout>
+
 
 
 
@@ -193,7 +192,6 @@
                 android:visibility="gone"
 
                 />
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -210,14 +208,9 @@
                         android:background="@drawable/ic_google_plus"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:id="@+id/signInButton"
-                        android:onClick="onClickLoginButtons"
-                        android:textAllCaps="false"
+                        android:id="@+id/signInGoogle"
                         android:text=""
-                        android:textColor="#ffffff"
-                        android:layout_gravity=""
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
+                        android:onClick="loginButtons"
 
                         />
 
@@ -242,7 +235,6 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:id="@+id/fb"
-                        android:onClick="onClickLoginButtons"
                         android:textAllCaps="false"
                         android:text=""
                         android:textColor="#ffffff"
@@ -274,7 +266,6 @@
                 android:textAllCaps="false"
                 android:padding="0dp"
                 android:background="@android:color/transparent"
-                android:onClick="methodRegistrar"
                 android:textColor="@color/colorTxvw"
                 android:layout_marginLeft="-3dp"/>
 
@@ -283,7 +274,20 @@
 
     </LinearLayout>
 
+    <!--<com.google.android.gms.common.SignInButton
+        android:id="@+id/signInButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />-->
 
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
