--- a/app/src/main/res/layout/cards_main.xml
+++ b/app/src/main/res/layout/cards_main.xml
@@ -7,8 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="14dp"
     app:cardUseCompatPadding="true"
-    android:layout_margin="2dp"
-    app:cardElevation="10dp"
+    android:layout_margin="1dp"
     android:hardwareAccelerated="true"
     app:cardMaxElevation="5dp"
     android:background="@android:drawable/dialog_holo_light_frame">
@@ -20,21 +19,53 @@
         android:gravity="center"
         >
 
-        <ImageButton
-            android:id="@+id/ivMainImage"
-            android:src="@mipmap/ic_launcher"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/ivMainImage"
+                android:src="@mipmap/ic_launcher"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvCaption"
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="50dp"
-            android:text="default caption"
-            android:background="@android:color/white"
-            android:layout_marginTop="-80dp"/>
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/userImgTablon"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_google_plus"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+
+                app:civ_border_color="#EEE"
+                app:civ_border_width="0dp"
+                app:civ_shadow="true"
+                app:civ_shadow_radius="10"
+                app:civ_shadow_color="#999"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/tvCaption"
+                android:layout_width="match_parent"
+                android:gravity="right|center"
+                android:layout_height="50dp"
+                android:text="default caption"
+                android:background="@android:color/white"
+
+                android:layout_gravity="top"/>
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
