--- a/app/src/main/res/layout/fragment_tablon.xml
+++ b/app/src/main/res/layout/fragment_tablon.xml
@@ -3,12 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.housecloud.housecloud.TablonFragment"
-    android:background="@android:color/holo_blue_light">
+    android:background="@android:color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+        >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvMain2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+
+    </LinearLayout>
 
 </FrameLayout>
