--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorLogin">#FDFDFD</color>
     <color name="colorTxvw">#212367</color>
     <color name="colorLine">#E8E8E8</color>
+    <color name="lineChat">#c8c7cc</color>
 
 </resources>
