--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -13,6 +13,8 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+
         android:paddingTop="@dimen/appbar_padding_top">
 
         <android.support.v7.widget.Toolbar
@@ -46,6 +48,7 @@
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem3"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tab_text_3" />
