--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.housecloud.housecloud.UsersActivity">
 
+    <include layout="@layout/app_bar_layout" android:id="@+id/chat_app_bar"></include>
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/users_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/users_list">
+        android:layout_below="@+id/chat_app_bar">
 
 
     </android.support.v7.widget.RecyclerView>
