--- a/app/src/main/res/layout/cards_main.xml
+++ b/app/src/main/res/layout/cards_main.xml
@@ -3,77 +3,114 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="230dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="14dp"
     app:cardUseCompatPadding="true"
-    android:layout_margin="1dp"
     android:hardwareAccelerated="true"
-    app:cardMaxElevation="5dp"
+    app:cardMaxElevation="4dp"
+    app:elevation="200dp"
     android:background="@android:drawable/dialog_holo_light_frame">
+
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
+        android:paddingHorizontal="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="10dp"
+        android:weightSum="10"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_weight="2.6"
+            >
 
             <TextView
                 android:id="@+id/tvTituloPost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:textStyle="bold"/>
+                android:textSize="20sp"
+                android:text="Titulo"
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:id="@+id/tvDescripcionPost"
-                android:layout_width="match_parent"
-                android:layout_height="100dp" />
-
-            <TextView
-                android:id="@+id/tvCategoriaPost"
+                android:text="Descripcion"
+                android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="50dp" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/tvCategoriaPost"
+                android:text="Categoria"
+                android:background="@drawable/message_text_background"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="2dp"
+                android:textColor="@android:color/white"
+                android:gravity="bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
+
+        </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:orientation="horizontal">
-
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/userImgTablon"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/ic_google_plus"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-
-                app:civ_border_color="#EEE"
-                app:civ_border_width="0dp"
-                app:civ_shadow="true"
-                app:civ_shadow_radius="10"
-                app:civ_shadow_color="#999"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/tvNombreUser"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="7.3">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:gravity="right|center"
-                android:layout_height="50dp"
-                android:background="@android:color/white"
-                android:layout_gravity="top"/>
+                android:layout_height="4dp"
+                android:background="@color/lineTablon"></LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="bottom"
+                android:paddingTop="4dp">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+
+                    android:gravity="center_horizontal">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/userImgTablon"
+
+                        android:layout_width="35dp"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_google_plus"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+
+                        app:civ_border_color="@color/colorAccent"
+                        app:civ_border_width="2dp"/>
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/tvNombreUser"
+                    android:layout_width="match_parent"
+                    android:text="Nombre"
+                    android:gravity="right|center"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:layout_gravity="top"/>
+
+            </LinearLayout>
         </LinearLayout>
+
 
 
     </LinearLayout>
