--- a/app/src/main/res/layout/fragment_tablon.xml
+++ b/app/src/main/res/layout/fragment_tablon.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.housecloud.housecloud.TablonFragment"
-    android:background="@android:color/white">
+    android:background="@color/colorTablon">
 
     <LinearLayout
         android:layout_width="match_parent"
