--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -22,15 +22,14 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|center_vertical"
             android:gravity="center">
-            
-            <ImageView
-                android:id="@+id/userPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/nav_header_vertical_spacing"
-                app:srcCompat="@android:drawable/sym_def_app_icon"
 
-                />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/userPhoto"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:background="@drawable/angel"/>
+
+
 
         </LinearLayout>
 
