--- a/app/src/main/res/layout/sample.xml
+++ b/app/src/main/res/layout/sample.xml
@@ -9,7 +9,8 @@
         android:layout_margin="0dp"
         android:fitsSystemWindows="true"
         android:padding="0dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
         <android.support.design.widget.TabLayout
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
@@ -18,6 +19,7 @@
             android:background="@color/colorPrimaryDark"
             app:tabIndicatorColor="@android:color/white"
             app:tabIndicatorHeight="1.5dp"
+
             />
     </android.support.design.widget.AppBarLayout>
     <android.support.v4.view.ViewPager
