--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#FF4081</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorFondo">#ff328f</color>
     <color name="colorMain">#313281</color>
@@ -9,5 +9,7 @@
     <color name="colorTxvw">#212367</color>
     <color name="colorLine">#E8E8E8</color>
     <color name="lineChat">#c8c7cc</color>
+    <color name="lineTablon">#f4f4f4</color>
+    <color name="colorTablon">#fcfcfc</color>
 
 </resources>
