--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.housecloud.housecloud.SplashScreenActivity"
+    tools:context="com.housecloud.housecloud.activitys_principales.SplashScreenActivity"
     android:orientation="vertical"
     android:gravity="center"
     android:id="@+id/spash">
