--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.housecloud.housecloud.UsersActivity">
+    tools:context="com.housecloud.housecloud.activitys_principales.UsersActivity">
 
     <include layout="@layout/app_bar_layout" android:id="@+id/chat_app_bar"></include>
 
