--- a/app/src/main/res/layout/sample.xml
+++ b/app/src/main/res/layout/sample.xml
@@ -19,6 +19,8 @@
             android:background="@color/colorPrimaryDark"
             app:tabIndicatorColor="@android:color/white"
             app:tabIndicatorHeight="1.5dp"
+            app:tabTextColor="@android:color/white"
+            app:tabSelectedTextColor="@android:color/white"
 
             />
     </android.support.design.widget.AppBarLayout>
